@@ -3,8 +3,13 @@
 == Table of Contents
 
 * Bugfix: wrong scaStatus after consent authorisation with zero sca methods for Embedded approach
+* Use own ObjectMapper instance instead of one provided by XS2A
 
 == Bugfix: wrong scaStatus after consent authorisation with zero sca methods for Embedded approach
 
 From now on when you read SCA status of the consent authorisation with zero SCA methods,
 you'll receive response `{"scaStatus": "failed"}`.
+
+== Use own ObjectMapper instance instead of one provided by XS2A
+
+Dependency on `ObjectMapper` instance used by XS2A has been removed and replaced with own `ObjectMapper` configuration.
